add personal information

--- a/index.htm
+++ b/index.htm
@@ -226,13 +226,13 @@
 	
 	<footer class="shade2">
 		<p>
-			&copy; Michishi 2020
+			&copy; Chris Petta 2020
 		</p>
 		<span style="display:flex;">
-			<a href="https://www.linkedin.com/">
+			<a href="https://www.linkedin.com/in/chrispetta/">
 				<img src="images/linkedinLogo.png" height="32" style="padding:5px;" alt="linkedin"/>
 			</a>
-			<a href="https://github.com/">
+			<a href="https://github.com/cpetta/chrispetta.net">
 				<img src="images/GitHub-Mark-32px.png" style="padding:5px;" alt="Checkout this site is on Github"/>
 			</a>
 		</span>
